--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "ts-node src/main.ts",
-      "build": "tsc"
+    "start": "ts-node --project tsconfig.json src/main.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,15 @@
   "type": "commonjs",
   "dependencies": {
     "@types/node": "^24.9.1",
+    "amqplib": "^0.10.9",
+    "better-sqlite3": "^12.5.0",
+    "express": "^5.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/amqplib": "^0.10.8",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/express": "^5.0.6"
   }
 }
